# shuecm

./: .gitignore  LICENSE  README.md  pyproject.toml
shuecm/: app.py  config.py
shuecm/blueprints/: __init__.py  info.py
shuecm/middlewares/: __init__.py  registration.py
shuecm/models/: __init__.py  db.py  prestart.py
shuecm/models/models/: user.py
tests/: test_shuecm.py
