[tool.poetry]
name = "shuecm"
version = "0.1.0"
description = "A next generation VK chat manager."
authors = ["shueteam"]

[tool.poetry.dependencies]
python = "^3.7"
"vk.py" = {git = "https://github.com/prostomarkeloff/vk.py"}
[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
